--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Article Listing</title>
 </head>
 <body>
-    
+    <header>
+        <h1>We release interesting articles about technology</h1>
+        <img src="resources/images/icons/Seperator.svg" title="" alt="">
+    </header>
+    <main>
+        <article>
+            <img src="resources/images/pictures/photo_1.png" title="" alt="">
+            <p>Unlocking the Power of Cloud Computing: A Guide to Scalable Solutions</p>
+            <p>November 12, 2024</p>
+        </article>
+        <article>
+            <img src="resources/images/pictures/photo_3.png" title="" alt="">
+            <p>The Future of AI: How Machine Learning is Revolutionizing Industries</p>
+            <p>November 12, 2024</p>
+        </article>
+        <article>
+            <img src="resources/images/pictures/photo_2.png" title="" alt="">
+            <p>The Impact of 5G on Business: How Faster Networks are Transforming the Way We Work</p>
+            <p>November 12, 2024</p>
+        </article>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
